# WontHurtMaps

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_rename_channel_link_to_channel_name.py  0003_add_unique_constraint_on_channel_state_.py  56f5d11e7dbe_add_unique_constraint_on_unrecognized_.py
backend/app/api/: main.py
backend/app/api/routers/: admin.py  public.py  route.py
backend/app/core/: config.py  database.py  exceptions.py  response_cache.py
backend/app/models/: __init__.py  channel_state.py  city.py  district.py  geocode_cache.py  location.py  post.py  slang_dictionary.py  street_rename.py  unrecognized_token.py  worker_heartbeat.py
backend/app/repositories/: __init__.py  advisory_lock.py  channel_state_repository.py  city_repository.py  district_repository.py  geocode_cache_repository.py  heartbeat_repository.py  location_repository.py  post_repository.py  street_rename_repository.py  unrecognized_token_repository.py
backend/app/schemas/: __init__.py  llm.py
backend/app/services/: channel_resolver.py  data_normalizer.py  deleted_posts_tracker.py  fetcher.py  geocoder.py  llm_extractor.py  pipeline_orchestrator.py  telegram_client.py  text_preprocessor.py
backend/app/worker/: __main__.py  main.py
docker/: backend.Dockerfile  entrypoint.sh  frontend.Dockerfile  nginx.conf
docs/: code-examples.md  dev-operations.md  todo.md  (+4 more)
(+34 files in other folders)
