[project]
name = "wonthurtmaps"
version = "0.1.0"
description = "City safety monitoring system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "geoalchemy2>=0.15,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "apscheduler>=3.10,<4",
    "telethon>=1.37,<2",
    "rapidfuzz>=3.0,<4",
    "slowapi>=0.1,<1",
    "pyjwt>=2.0,<3",
    "passlib[bcrypt]>=1.7,<2",
    "httpx>=0.27,<1",
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "apscheduler.*", "telethon.*", "slowapi.*"]
ignore_missing_imports = true
